--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -4,14 +4,12 @@
     font-family: 'Michroma', sans-serif;
     font-family: 'Nunito', sans-serif;
 }
-ul li a:hover{
+
+ul a:hover{
     text-transform: uppercase;
 }
 
 
-.logo{
-    width: 150px;
-}
 .foto-inicio{
     width: 1000px;
 }
