--- a/css/estilos.css
+++ b/css/estilos.css
@@ -63,3 +63,19 @@ ul a:hover{
     width: 100px ;
     height: 70px ;
  }
+ 
+ .casamiento{
+    padding: 100px;
+ }
+ .galeria img{
+    width: 100%;
+    height: 300px;
+ }
+ .galeria img:hover {
+    border: 5px solid #f7f7f7;
+    
+ }
+ .columnas{
+    padding: 25px;
+    margin: 0;
+ }
